--- a/.github/workflows/new-dotnet-desktop.yml
+++ b/.github/workflows/new-dotnet-desktop.yml
@@ -56,11 +56,12 @@ jobs:
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
 
     env:
-      Solution_Name: VPinMAMETest/VPinMAMETest.sln                                    # Replace with your solution name, i.e. MyWpfApp.sln.
-      Test_Project_Path: VPinMAMETest/VPinMAMETest\VPinMAMETest.csproj   # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
+      Solution_Name: VPinMAMETest\VPinMAMETest.sln                                    # Replace with your solution name, i.e. MyWpfApp.sln.
+      Test_Project_Path: VPinMAMETest\VPinMAMETest\VPinMAMETest.csproj   # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
       Wap_Project_Directory: VPinMAMETest.Package                        # Replace with the Wap project directory relative to the solution, i.e. MyWpfApp.Package.
       Wap_Project_Path: MyWPFApp.Package\MyWPFApp.Package.wapproj        # Replace with the path to your Wap project, i.e. MyWpf.App.Package\MyWpfApp.Package.wapproj.
-
+      Wap_Project_Name: MyWpfApp.Package.wapproj
+      
     steps:
     - name: Checkout
       uses: actions/checkout@v4
